infra/k8s-prod/ingress.srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: www.duvdu.com
      http:
        paths:
          - path: /api/chat/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: chat-srv
                  port: 
                    number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: auth-srv
                  port: 
                    number: 3000
          - path: /api/category/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: category-srv
                  port: 
                    number: 3000
          - path: /api/portfolio-post/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: portfolio-post-srv
                  port: 
                    number: 3000
          - path: /api/studio-booking/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: studio-booking-srv
                  port: 
                    number: 3000
          - path: /api/copyrights/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: copyright-srv
                  port: 
                    number: 3000

    - host: duvdu.com
      http:
        paths:
          - path: /api/chat/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: chat-srv
                  port: 
                    number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: auth-srv
                  port: 
                    number: 3000
          - path: /api/category/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: category-srv
                  port: 
                    number: 3000
          - path: /api/portfolio-post/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: portfolio-post-srv
                  port: 
                    number: 3000
          - path: /api/studio-booking/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: studio-booking-srv
                  port: 
                    number: 3000
          - path: /api/copyrights/?(.*)
            pathType: Prefix
            backend: 
              service:
                  name: copyright-srv
                  port: 
                    number: 3000

  tls:
    - hosts:
        - www.duvdu.com
        - duvdu.com
      secretName: www-duvdu-com-tls


---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: '54a51e09-6100-43ae-a7c6-2028b55226de'
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.duvdu.com'
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "6"
    service.beta.kubernetes.io/do-loadbalancer-allow-rules: "ip:164.92.158.68,ip:159.223.217.125,ip:188.166.11.66,ip:164.92.150.87,ip:164.92.158.12,ip:159.223.217.94"

  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
